# veggie

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  main_fast-saas.yml
example/: monitor_tasks.py  tasks.py
tests/: test_monitor.py  test_storage.py
veggie/: monitor.py  storage.py
veggie/webapp/: api.py  flask_app.py
veggie/webapp/dashboard/: config.py  header.py  index.py  navbar.py  style.py
veggie/webapp/dashboard/pages/: not_found_404.py  status.py  tasks.py
